@@ -14,6 +14,8 @@ Post-v2.9.0
      * Add v4/v6 fragmentation support for conntrack.
      * New "ovs-appctl dpctl/ipf-set-enabled" command for userspace datapath
        conntrack fragmentation support.
+     * New "ovs-appctl dpctl/ipf-set-minfragment" command for userspace
+       datapath conntrack fragmentation support.
    - ovs-vsctl: New commands "add-bond-iface" and "del-bond-iface".
    - OpenFlow:
      * OFPT_ROLE_STATUS is now available in OpenFlow 1.3.
